2023/03-istio-kube-security/ingress/mtls.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: ingress
spec:
  mtls:
    mode: STRICT
